--- a/calysto-hy/meta.yaml
+++ b/calysto-hy/meta.yaml
@@ -17,10 +17,11 @@ source:
 build:
   number: 0
   script: python setup.py install --single-version-externally-managed --record=record.txt
+  noarch: python
 
 requirements:
   build:
-    - noarch: python
+    - python
     - setuptools
     - hy
     - metakernel
